tweak doc